--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 springfox.documentation.swagger.v2.path=/api-docs
 server.contextPath=/
-server.port=8080
 spring.jackson.date-format=co.uk.bankcorp.RFC3339DateFormat
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
@@ -8,9 +7,9 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.generate-ddl=true
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/acme?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${DATABASE_PORT}/${DATABASE_NAME}?createDatabaseIfNotExist=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
 co.uk.bankcorp.client=better-banking
 co.uk.bankcorp.secret=7yrbR8XpY45bcKPP
